Fixed a bug that uneccessary scrollbar

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -152,8 +152,8 @@ sb-component {
 	padding-top: 11.5rem;
 }
 
-.editor.viewport .ui.stackable.grid {
-	margin: 0px;
+.editor.viewport {
+	overflow-x: hidden;
 }
 
 .editor.viewport .editarea {
